--- a/candyshop/src/App.css
+++ b/candyshop/src/App.css
@@ -6,37 +6,23 @@
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+   padding: 10px;
+   margin-top: 50px;
+   border-radius: 50px;
+   right: 100px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logomarca {
+  font-family: 'Passion One', cursive; 
+  color: white;
+  text-shadow: black 0.1em 0.1em 0.2em;
+  font-size: 60px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.imagem {
+  left: 0;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  background-color: palevioletred;
 }
